--- a/expense-tracker/requirements.txt
+++ b/expense-tracker/requirements.txt
@@ -119,3 +119,9 @@ webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
 Werkzeug==3.1.3
+Flask==2.3.3
+Flask-SQLAlchemy==3.0.5
+Werkzeug==2.3.7
+reportlab==4.0.4
+gunicorn==21.2.0
+psycopg2-binary==2.9.7
